[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kernel-and-quill"
dynamic = ["version"]
description = 'Landing site for Kernel and Quill Consulting'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "CaseyFaist", email = "caseylfaist@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "mkdocs",
]

[project.urls]
Documentation = "https://github.com/CaseyFaist/kernel-and-quill#readme"
Issues = "https://github.com/CaseyFaist/kernel-and-quill/issues"
Source = "https://github.com/CaseyFaist/kernel-and-quill"

[tool.hatch.version]
path = "src/kernel_and_quill/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/kernel_and_quill tests}"

[tool.coverage.run]
source_pkgs = ["kernel_and_quill", "tests"]
branch = true
parallel = true
omit = [
  "src/kernel_and_quill/__about__.py",
]

[tool.coverage.paths]
kernel_and_quill = ["src/kernel_and_quill", "*/kernel-and-quill/src/kernel_and_quill"]
tests = ["tests", "*/kernel-and-quill/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
