[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kernel-and-quill"
description = "Main site for Kernel and Quill consulting"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
  "mkdocs",
  "mkdocs-bootswatch",
  "mkdocs-minify-plugin",
]